--- a/Application/Teacher/View/Apply/leave.html
+++ b/Application/Teacher/View/Apply/leave.html
@@ -3,24 +3,16 @@
     <div class="ui-head">
         <div class="container">
             <div class="pull-right">
-                <div class="user">
-                    <p><img src="__PUBLIC__/teacher/img/avatar1.jpg" alt="">
-                        <a href="">董嘉耀</a>
-                        <i></i>
-                    </p>
-                    <div class="ex">
-                        <p><a href="">个人信息</a></p>
-                        <p><a href="">修改密码</a></p>
-                        <p><a href="">退出</a></p>
-                    </div>
-                </div>
+                <include file="Public/user"/>
             </div>
             <div class="tabs">
                 <div class="ct">
                     <ul>
-                        <li><a href="">实习申请</a></li>
-                        <li><a href="">实习变更</a></li>
-                        <li><a href="" class="on">请假申请</a></li>
+                        <li><a href="{:U('Apply/index')}" >实习申请</a></li>
+                        <!--<li><a href="{:U('Apply/corporation')}" class="on">实习单位变更</a></li>-->
+                        <!--<li><a href="{:U('Apply/position')}">实习岗位变更</a></li>-->
+                        <li><a href="#">实习变更</a></li>
+                        <li><a href="{:U('Apply/leave')}" class="on">请假申请</a></li>
                     </ul>
                 </div>
                 <a href="javascript:;" class="aw prev"></a><a href="javascript:;" class="aw next"></a>
@@ -33,7 +25,7 @@
             <div class="ht10"></div>
             <div class="ui-filter">
                 <div class="select">
-                    <p><a href="">批阅批次</a></p>
+                    <p><a href="">实习批次</a></p>
                     <div class="ex">
                         <div class="list" style="min-width: 150px;">
                             <p><a href="">[141]2009-2010批次</a></p>
@@ -43,11 +35,11 @@
                 </div>
                 <span class="wh10"></span>
                 <div class="select">
-                    <p><a href="">学部</a></p>
+                    <p><a href="">院系</a></p>
                     <div class="ex">
                         <div class="list">
-                            <p><a href="">学部1</a></p>
-                            <p><a href="">学部2</a></p>
+                            <p><a href="">院系1</a></p>
+                            <p><a href="">院系2</a></p>
                         </div>
                     </div>
                 </div>
@@ -100,34 +92,24 @@
                         <tbody>
                         <tr>
                             <td>&nbsp;</td>
-                            <td><b>标题</b></td>
                             <td><b>学号</b></td>
                             <td><b>提交人</b></td>
                             <td><b>班级</b></td>
-                            <td><b>实习课程</b></td>
                             <td><b>提交时间</b></td>
-                            <td><b>实习单位</b></td>
-                            <td><b>评审人</b></td>
-                            <td><b>评审时间</b></td>
                             <td><b>评审结果</b></td>
                             <td><b>操作</b></td>
                         </tr>
-
-
                         <volist name="list" id="v">
                             <tr>
                                 <td><a href="" class="cbox"></a></td>
-                                <td>哈哈</td>
-                                <td>20161005</td>
-                                <td>董嘉耀</td>
-                                <td>产品班</td>
-                                <td>语文</td>
-                                <td>2016-11-18</td>
-                                <td>&nbsp;</td>
-                                <td>班主任</td>
-                                <td>2017-01-16</td>
-                                <td>已退回</td>
-                                <td><a href="">删除</a></td>
+                                <td>{$v.student_id}</td>
+                                <td>{$v.stuname}</td>
+                                <td>{$v.classname}</td>
+                                <td>{$v.applytime}</td>
+                                <td>{$v.status|setAuditStatus}</td>
+                                <td><a href="__CONTROLLER__/editLeave/id/{$v.id}">查看</a>
+                                    <a href="javascript:void(0)" class="del" attr-id="{$v.id}">删除</a>
+                                </td>
                             </tr>
                         </volist>
                         </tbody>
@@ -160,3 +142,24 @@
 
     </div>
 </footer>
+<script>
+    $(function(){
+        $('.del').click(function(){
+            var $id = $(this).attr('attr-id');
+            var $url = "{:U('Apply/delLeave')}";
+            layer.confirm('真的要删除本条数据吗？',{icon:3},function(msg){
+                $.post($url,{id:$id},function(msg){
+                    if(msg.status==1){
+                        layer.msg(msg.message,{icon:6},function(){
+                            window.location.href = "/teacher.php/Apply/leave";
+                        });
+                    }else{
+                        layer.msg(msg.message,{icon:5},function(){
+                            window.location.href = "/teacher.php/Apply/leave";
+                        });
+                    }
+                },'JSON');
+            })
+        });
+    })
+</script>
