--- a/Application/Teacher/View/Apply/nav.html
+++ b/Application/Teacher/View/Apply/nav.html
@@ -21,7 +21,7 @@
                     <div class="i on">
                         <a href="{:U('Apply/index')}">
                             <p><i class="ico2"></i>
-                                我的申请
+                                申请审核
                             </p>
                         </a>
                     </div>
