--- a/Application/Teacher/View/Practice/addCor.html
+++ b/Application/Teacher/View/Practice/addCor.html
@@ -165,7 +165,7 @@
                         <p class="text-center">
                             <button type="button" class="bt-btn1 style1">保存</button>
                             <span class="wh40"></span>
-                            <button type="button" class="bt-btn1 style2">取消</button>
+                            <button type="reset" class="bt-btn1 style2">取消</button>
                         </p>
                     </div>
                 </form>
