--- a/Application/Teacher/View/Report/weekly.html
+++ b/Application/Teacher/View/Report/weekly.html
@@ -1,1 +1,182 @@
-这里是周报
+<include file="Report/nav"/>
+<main>
+    <div class="ui-head">
+        <div class="container">
+            <div class="pull-right">
+                <div class="user">
+                    <p><img src="img/avatar1.jpg" alt="">
+                        <a href="">董嘉耀</a>
+                        <i></i>
+                    </p>
+                    <div class="ex">
+                        <p><a href="">个人信息</a></p>
+                        <p><a href="">修改密码</a></p>
+                        <p><a href="">退出</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="tabs">
+                <ul>
+                    <li><a href="{:U('Report/index')}" >周报</a></li>
+                    <li><a href="{:U('Report/weekly')}" class="on">月报</a></li>
+                    <li><a href="">实习总结</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="ht15"></div>
+    <div class="ui-main">
+        <div class="container">
+            <div class="ht10"></div>
+            <div class="ui-table">
+                <div class="ct">
+                    <table>
+                        <tbody>
+                        <tr>
+                            <td>&nbsp;</td>
+                            <td><b>学号</b></td>
+                            <td><b>提交人</b></td>
+                            <td><b>班级</b></td>
+                            <td><b>提交时间</b></td>
+                            <td><b>实习单位</b></td>
+                            <td><b>评审结果</b></td>
+                            <td><b>操作</b></td>
+                        </tr>
+                        <tr>
+                            <td><a href="" class="cbox"></a></td>
+                            <td>20161056</td>
+                            <td>董嘉耀</td>
+                            <td>产品班</td>
+                            <td>2016-01-21</td>
+                            <td>&nbsp;</td>
+                            <td>待评审</td>
+                            <td>
+                                <a href="">查看</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="" class="cbox"></a></td>
+                            <td>20161056</td>
+                            <td>欧阳正华</td>
+                            <td>产品班</td>
+                            <td>2016-01-21</td>
+                            <td>&nbsp;</td>
+                            <td>待评审</td>
+                            <td>
+                                <a href="">查看</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="" class="cbox"></a></td>
+                            <td>20161056</td>
+                            <td>董嘉耀</td>
+                            <td>产品班</td>
+                            <td>2016-01-21</td>
+                            <td>&nbsp;</td>
+                            <td>待评审</td>
+                            <td>
+                                <a href="">查看</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="" class="cbox"></a></td>
+                            <td>20161056</td>
+                            <td>欧阳正华</td>
+                            <td>产品班</td>
+                            <td>2016-01-21</td>
+                            <td>&nbsp;</td>
+                            <td>待评审</td>
+                            <td>
+                                <a href="">查看</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="" class="cbox"></a></td>
+                            <td>20161056</td>
+                            <td>董嘉耀</td>
+                            <td>产品班</td>
+                            <td>2016-01-21</td>
+                            <td>&nbsp;</td>
+                            <td>待评审</td>
+                            <td>
+                                <a href="">查看</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="" class="cbox"></a></td>
+                            <td>20161056</td>
+                            <td>欧阳正华</td>
+                            <td>产品班</td>
+                            <td>2016-01-21</td>
+                            <td>&nbsp;</td>
+                            <td>待评审</td>
+                            <td>
+                                <a href="">查看</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="" class="cbox"></a></td>
+                            <td>20161056</td>
+                            <td>董嘉耀</td>
+                            <td>产品班</td>
+                            <td>2016-01-21</td>
+                            <td>&nbsp;</td>
+                            <td>待评审</td>
+                            <td>
+                                <a href="">查看</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="" class="cbox"></a></td>
+                            <td>20161056</td>
+                            <td>欧阳正华</td>
+                            <td>产品班</td>
+                            <td>2016-01-21</td>
+                            <td>&nbsp;</td>
+                            <td>待评审</td>
+                            <td>
+                                <a href="">查看</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="" class="cbox"></a></td>
+                            <td>20161056</td>
+                            <td>董嘉耀</td>
+                            <td>产品班</td>
+                            <td>2016-01-21</td>
+                            <td>&nbsp;</td>
+                            <td>待评审</td>
+                            <td>
+                                <a href="">查看</a>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="ht35"></div>
+            <div class="ui-paging">
+                <span>共15页，共143条记录</span>
+                &nbsp;
+                <ul>
+                    <li><a href=""><</a></li>
+                    <li><a href="" class="on">1</a></li>
+                    <li><a href="">2</a></li>
+                    <li><a href="">3</a></li>
+                    <li><a href="">4</a></li>
+                    <li><a href="">></a></li>
+                </ul>
+                <div class="pull-left">
+                    <a href="" class="cbox"><i></i>全选</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+<!-------------------------------------- 内容结束 -------------------------------------->
+<!-------------------------------------- 尾部开始 -------------------------------------->
+<footer>
+    <div class="container">
+
+    </div>
+</footer>
