--- a/Application/Teacher/View/Student/add.html
+++ b/Application/Teacher/View/Student/add.html
@@ -5,19 +5,7 @@
 <main>
     <div class="ui-head">
         <div class="container">
-            <div class="pull-right">
-                <div class="user">
-                    <p><img src="__PUBLIC__/teacher/img/avatar1.jpg" alt="">
-                        <a href="">董嘉耀</a>
-                        <i></i>
-                    </p>
-                    <div class="ex">
-                        <p><a href="">个人信息</a></p>
-                        <p><a href="">修改密码</a></p>
-                        <p><a href="">退出</a></p>
-                    </div>
-                </div>
-            </div>
+            <include file="Public/user"/>
             <div class="tabs">
                 <ul>
                     <li><a href="{:U('Student/index')}" class="on">学生管理</a></li>
