--- a/Public/teacher/css/pages.css
+++ b/Public/teacher/css/pages.css
@@ -110,6 +110,7 @@
   border: 1px solid #e4e2e2;
   box-shadow: 0 3px 3px #e4e2e2;
   display: none;
+  z-index: 9999;
 }
 .ui-head .user:hover >.ex{
   display: block;
@@ -223,10 +224,10 @@
 }
 .ui-table table tr td{
   border-right: 1px solid #f6f6f6;
-  padding: 10px 30px;
+  padding: 10px 20px;
   color: #000;
   line-height: 1em;
-  font-size: 13px;
+  font-size: 15px;
 }
 .ui-table table tr:first-child td{
   background-color: #78a9e6 !important;
@@ -446,6 +447,16 @@
   color: #fff;
   font-size: 14px;
 }
+
+.ui-filter .text{
+  display: inline-block;
+  width: 155px;
+  height: 30px;
+  text-indent: 10px;
+  position: relative;
+  top: -1px;
+}
+
 .ui-filter .bt:active{
   background-color: #3885eb;
 }
@@ -850,6 +861,7 @@
 .ui-path p a{
   color: #64a6fd;
   opacity: .5;
+  font-size: 15px;
 }
 .ui-path p a:hover{
   text-decoration: underline;
@@ -901,7 +913,7 @@
   height: 50px;
   padding: 6px 20px;
   border-radius: 4px;
-  font-size: 16px;
+  font-size: 20px;
 }
 .ui-login .form .forget{
   color: #7a8599;
@@ -921,6 +933,7 @@
   color: #fff;
   font-size: 16px;
   background-color: #64a6fd;
+  width:390px;
 }
 .ui-login .form .bt:active{
   background-color: #3885eb;
@@ -982,7 +995,7 @@
   margin-bottom: 0;
   color: #949494;
   font-size: 14px;
-  width: 200px;
+  width: 400px;
   text-align: left;
 }
 .ui-article >.ft p label b{
@@ -1241,13 +1254,27 @@
   color: #aaa;
 }
 .ui-head1{
-  background-color: #f8f7f7;
+  background-color: #78a9e6;
 }
 .ui-head1 p{
   line-height: 30px;
   text-indent: 15px;
-  color: #2a2a2a;
+  color: #fff;
   font-size: 14px;
 }
 
 /*----------customize----------*/
+.viewcor{
+  padding:9px 10px 0 8px !important;
+  width:200px;
+  font-size:14px;
+  margin-left:5px;
+  color: #64a6fd;
+}
+
+
+
+
+
+
+
